<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <LinearLayout
        android:id="@+id/content_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">



            <ImageView
                android:id="@+id/main_ecole_icon"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_ecole_icon"
                android:transitionName="@string/trans_ecole_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corners"
                android:elevation="2dp">

                <TextView
                    android:id="@+id/main_vertretung_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_titel_deine_vertretung"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/main_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_vertretung_title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/text_loading_new_content" />

                <RelativeLayout
                    android:id="@+id/recycler_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_date">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/imgbtn_scrolldown"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignBottom="@id/recycler_main"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/selector_scrolldown_button"
                        android:elevation="4dp"
                        android:src="@drawable/ic_arrow_drop_down_red"
                        android:visibility="invisible" />

                </RelativeLayout>

                <!-- TODO -->
                <RelativeLayout
                    android:id="@+id/main_container_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recycler_holder"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_above="@id/main_extra_information"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:id="@+id/main_extra_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="Zusätzliche Inf romation" />
                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/imgbtn_more"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/selector_vert_button"
        android:src="@drawable/ic_more_vert" />

    <LinearLayout
        android:id="@+id/menu_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/rounded_corners"
        android:elevation="6dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_dropdown_menu"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/text_menu_logout"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/selector_dropdown_menu"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/text_help"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>